# rag

./: .gitignore  README.md  pyproject.toml
scripts/: run.bat
src/: config.py
src/models/: embedding_handler.py  llm_handler.py
src/processing/: pdf_processor.py  text_chunker.py
src/rag/: __init__.py  generator.py  retriever.py
src/storage/: document_store.py  vector_store.py
src/utils/: __init__.py  logger.py
ui/: streamlit_app.py
ui/components/: __init__.py  chat_interface.py  file_upload.py  settings.py
ui/styles/: main.css
